--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-traceur": "^0.17.1",
     "gulp-watch": "^4.3.5",
+    "highland": "^2.5.1",
+    "js-yaml": "^3.4.3",
     "lazypipe": "^1.0.1",
     "lodash": "^3.10.1",
     "main-bower-files": "^2.9.0",
