--- a/data/_index.yml
+++ b/data/_index.yml
@@ -11,6 +11,16 @@ projects:
       - src: "/images/progress.webm"
     poster: "images/progress.png"
 
+  - name: Flatloc
+    class: flatloc
+    description: "An apartment search app. Intelligently cross-references ads' content with OpenStreetMaps data to create accurate geo-tags."
+    href: "https://youtu.be/oeg4tXLBWMs"
+    videos:
+      - src: "/images/flatloc.mp4"
+      - src: "/images/flatloc.webm"
+    poster: "/images/flatloc.png"
+
+
   - name: shareless
     class: shareless
     href: "https://www.youtube.com/watch?v=eV1Srx4BHpg"
@@ -23,7 +33,7 @@ projects:
   - name: Read·a·bit
     class: readabit
     href: "http://readabit-staging.herokuapp.com/"
-    description: "A Bitcoin Paywall app which is extremely easy to integrate with any existing blog or even a static webpage. A Coinbase hackhathon entry."
+    description: "A Bitcoin Paywall app. Extremely easy to integrate with any existing blog or even a static webpage. A Coinbase hackhathon entry."
     videos:
       - src: "/images/readabit.mp4"
       - src: "/images/readabit.webm"
