add article author

--- a/data/_head.yml
+++ b/data/_head.yml
@@ -1,2 +1,2 @@
 head:
-  description: "Hi, my name is Piotr and I'm a programmer living in London."
+  description: "Hi, my name is Piotr and I'm a Software Engineer living in London."
